修复了页面跳转及视频嵌入 Signed-off-by: Du-mogu <406681699@qq.com>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <ul class="navlist">
-                <li ><a href="/second.html">视频</a></li><!--ctrl+D复制整行代码-->
+                <li ><a href="second.html">视频</a></li><!--ctrl+D复制整行代码-->
                 <li><a href="#">游戏</a></li>
                 <li><a href="#">新闻</a></li>
                 <li><a href="#">社区</a></li>
