--- a/second.html
+++ b/second.html
@@ -9,7 +9,7 @@
     <body>
         
         <div class="videos">
-            <video autoplay="autoplay" controls="controls" src="/video/shuang.mp4" type="video/mp4";>
+            <video autoplay="autoplay" controls="controls" src="video/shuang.mp4" type="video/mp4";>
             </video>
             
         </div>
