链接 Signed-off-by: Du-mogu <406681699@qq.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
+    <meta name="viwport" content="width=device-width,inital-scale=1.0">
 </head>
 <body>  
     <!--在下方书写导航条-->
@@ -31,7 +32,7 @@
           
         <section>
             <div class="videos">
-                <video autoplay="autoplay" controls="controls" src="../video/cg.mp4" type="video/mp4";>
+                <video autoplay="autoplay" controls="controls" src="video/cg.mp4" type="video/mp4";>
                 </video>
             </div>
         </section>
