--- a/second.html
+++ b/second.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 	<title>Warframe</title>
-    <link rel="stylesheet" href="/css/normalize.css">
-	<link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
+    <meta name="viwport" content="width=device-width,inital-scale=1.0">
 </head>
     <body>
         
         <div class="videos">
-            <video autoplay="autoplay" controls="controls" src="video/shuang.mp4" type="video/mp4";>
-            </video>
+            <video autoplay="autoplay" controls="controls" src="video/shuang.mp4" type="video/mp4";></video>
             
         </div>
         <center><li><a href="index.html">返回上级</a></li>
